--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<body style="background: #333333 url('images/pexels-pixabay-255464.jpg');">
+<body style="background: #333333 url('pexels-pixabay-255464.jpg');">
 <div class="snow-container" 
      style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
      pointer-events: none; overflow: hidden; z-index: 9999;">
@@ -24,7 +24,7 @@ document.addEventListener("DOMContentLoaded", function () {
         const flake = document.createElement("img");
 
         // 🌸 Change this to your flower image file
-        flake.src = "images/flower.png";
+        flake.src = "flower.png";
 
         flake.style.position = "absolute";
         flake.style.top = "-20px";
@@ -62,7 +62,7 @@ document.addEventListener("DOMContentLoaded", function () {
 		<!-- Below you can add an image of yourself.
 				If you don't want to put your own image, that is fine.
 					You can either delete the entire image tag or you can just add a funny image -->
-		<img src="images/self.jpg" />
+		<img src="self.jpg" />
 		<!-- Add a personal bio below -->
 		<p>
 			Artist Statement : Born in Macau and currently based in California, I am a multidisciplinary artist working across painting, clay, and mixed media. With a background in social work and cultural studies, my practice explores personal identity, ideology, and myth, blending subjective narratives with raw expression. Art, to me- is an ongoing journey into the unknown, a space to reflect, transform, and discover meaning through creation.
@@ -77,7 +77,7 @@ document.addEventListener("DOMContentLoaded", function () {
 		<!-- Change the project name below -->
 		<h2>8-bit Augmentation</h2>
 		<!-- Change the image name below to match what you have dropped into the image folder -->
-		<img src="images/assignment2.jpg" />
+		<img src="assignment2.jpg" />
 		<!-- Change the description below and add something about your project -->
 		<p>I created an 8-bit character for taking photos!</p>
 	</section>
@@ -86,7 +86,7 @@ document.addEventListener("DOMContentLoaded", function () {
 		<!-- Change the project name below -->
 		<h2>Upcycling an Object</h2>
 		<!-- Change the image name below to match what you have dropped into the image folder -->
-		<img src="images/assignment4.jpg" />
+		<img src="assignment4.jpg" />
 		<!-- Change the description below and add something about your project -->
 		<p>I UPCYCLING an old object and giving it life again for reuse!</p>
 	</section>	
@@ -95,8 +95,8 @@ document.addEventListener("DOMContentLoaded", function () {
 		<!-- Change the project name below -->
 		<h2>3d Modeling-The Maw of the Wastes</h2>
 		<!-- Change the image name below to match what you have dropped into the image folder -->
-		<img src="images/assignment5.png" />
-		<img src="images/IMG_8972.JPG" />
+		<img src="assignment5.png" />
+		<img src="IMG_8972.JPG" />
 		<!-- Change the description below and add something about your project -->
 		<p>I create a fictional animal using SculptGL and printed it out with my 3D printer!</p>
 	</section>		
@@ -105,8 +105,8 @@ document.addEventListener("DOMContentLoaded", function () {
 		<!-- Change the project name below -->
 		<h2>Create a Bob Ross Painting and 2D Animation</h2>
 		<!-- Change the image name below to match what you have dropped into the image folder -->
-		<img src="images/assignment7.png" />
-		<img src="images/AOMANIN_assignmennt11_walking-eveningV2.gif" />
+		<img src="assignment7.png" />
+		<img src="AOMANIN_assignmennt11_walking-eveningV2.gif" />
 		<!-- Change the description below and add something about your project -->
 		<p>I use Kyle's Brushes with other Photoshop techniques to create a Bob Ross inspired digital landscape painting, after that, I use the animation techniques in Photoshop, create a simple 2d animation with the painting.</p>
 	</section>	
@@ -115,7 +115,7 @@ document.addEventListener("DOMContentLoaded", function () {
 		<!-- Change the project name below -->
 		<h2>Lost Pet Poster</h2>
 		<!-- Change the image name below to match what you have dropped into the image folder -->
-		<img src="images/AOMANIN-Unit 10Assignment _Lost Pet Poster.jpg" />
+		<img src="AOMANIN-Unit 10Assignment _Lost Pet Poster.jpg" />
 		<!-- Change the description below and add something about your project -->
 		<p>I morphed animal, combining two or more animals together with the Adobe Photoshop to create a Lost Pet Poster!</p>
 	</section>	
@@ -124,7 +124,7 @@ document.addEventListener("DOMContentLoaded", function () {
 		<!-- Change the project name below -->
 		<h2>Animated GIF MEME</h2>
 		<!-- Change the image name below to match what you have dropped into the image folder -->
-		<img src="images/AOMANIN_assignmennt12.gif" />
+		<img src="AOMANIN_assignmennt12.gif" />
 		<!-- Change the description below and add something about your project -->
 		<p>I create an Christmas animated GIF using the video import as layers function in Photoshop!</p>
 	</section>		
@@ -133,8 +133,8 @@ document.addEventListener("DOMContentLoaded", function () {
 		<!-- Change the project name below -->
 		<h2>Exquisite Corpse</h2>
 		<!-- Change the image name below to match what you have dropped into the image folder -->
-		<img src="images/AOMANIN_exquisite_corpse_template2.jpg" />
-		<img src="images/AOMANIN_exquisite_corpse_template_TOP.jpg" />
+		<img src="AOMANIN_exquisite_corpse_template2.jpg" />
+		<img src="AOMANIN_exquisite_corpse_template_TOP.jpg" />
 		<!-- Change the description below and add something about your project -->
 		<p>I work with my classmate to create the Exquisite Corpse Creatures! I created the top portion of an exquisite corpse composition, and combined with my classmate's middle and bottom portion!</p>
 	</section>		
