Fix image file extensions in index.html

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ document.addEventListener("DOMContentLoaded", function () {
 		<!-- Change the project name below -->
 		<h2>8-bit Augmentation</h2>
 		<!-- Change the image name below to match what you have dropped into the image folder -->
-		<img src="assignment2.jpg" />
+		<img src="assignment2.JPG" />
 		<!-- Change the description below and add something about your project -->
 		<p>I created an 8-bit character for taking photos!</p>
 	</section>
@@ -86,7 +86,7 @@ document.addEventListener("DOMContentLoaded", function () {
 		<!-- Change the project name below -->
 		<h2>Upcycling an Object</h2>
 		<!-- Change the image name below to match what you have dropped into the image folder -->
-		<img src="assignment4.jpg" />
+		<img src="assignment4.JPG" />
 		<!-- Change the description below and add something about your project -->
 		<p>I UPCYCLING an old object and giving it life again for reuse!</p>
 	</section>	
