Update artist statement to personal bio

--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@ document.addEventListener("DOMContentLoaded", function () {
 		<img src="self.jpg" />
 		<!-- Add a personal bio below -->
 		<p>
-			Artist Statement : Born in Macau and currently based in California, I am a multidisciplinary artist working across painting, clay, and mixed media. With a background in social work and cultural studies, my practice explores personal identity, ideology, and myth, blending subjective narratives with raw expression. Art, to me- is an ongoing journey into the unknown, a space to reflect, transform, and discover meaning through creation.
+			 Bio: Born in Macau and currently based in California, I am a multidisciplinary artist working across painting, clay, and mixed media. With a background in social work and cultural studies, my practice explores personal identity, ideology, and myth, blending subjective narratives with raw expression. Art, to me- is an ongoing journey into the unknown, a space to reflect, transform, and discover meaning through creation.
+			<a href="https://www.creativemacau.org.mo/creative/yan-ao/" target="_blank"> Visit my Creative Macau profile</a>
 		</p>
+		
 	</header>
 	
 	
